concord_macros/tests/dsl/fail/fail_policies_rejects_default_rate_limit.stderr
error: default rate_limit policy is not allowed in policies block; use default { ... }
  --> tests/dsl/fail/fail_policies_rejects_default_rate_limit.rs:14:13
   |
14 |             rate_limit app
   |             ^^^^^^^^^^
